--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lamborghini Image Gallery</title>
     <script src="https://kit.fontawesome.com/11b6426fb6.js" crossorigin="anonymous" async></script>
     <link rel="stylesheet" href="./styles.css">
 
